# VarCheck

./: CMakeLists.txt  README.md
doc/: llvm-requirement.md
src/wzh/llvm/: Main.kt
src/wzh/llvm/analysis/: BitVector.kt  Flow.kt  VarChecker.kt
src/wzh/llvm/lang/: BasicBlock.kt  Func.kt  Instruction.kt  Module.kt  Scope.kt  Type.kt  Value.kt
src/wzh/llvm/parse/: AstNode.kt  Builder.kt  Lexer.kt  Location.kt  ParseError.kt  Parser.kt  Token.kt
src/wzh/llvm/plot/: BfsIterator.kt  Plotter.kt
src/wzh/paproject/: Main.java
src/wzh/varcheck/: Main.java  Main.kt
src/wzh/varcheck/lang/: BasicBlock.kt  Function.kt  Instruction.kt  Module.kt  Scope.kt  Type.kt  Value.kt
src/wzh/varcheck/parse/: AstNode.kt  Builder.kt  Lexer.java  Lexer.kt  Location.java  Location.kt  ParseError.java  ParseError.kt  Parser.kt  Token.kt
test/: fib.c  fib.ll  uninit.c  uninit.ll
